--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ button, input {
   width: 100%;
 }
 
-img {
+.img-container {
   position: absolute;
   z-index: -1;
   height: 100vh;
@@ -64,8 +64,73 @@ li {
   margin: 100px 250px;
 }
 
+.t-container {
+  width: 100vw;
+  height: 100vh;
+}
+
+.tutorial-detail {
+  margin: 0px;
+  padding: 20px 0px;
+  border: 20px;
+  background-color: #007E6B;
+  height: 100%;
+  width: 100%;
+}
+
+.tutorial-video {
+  border: 0;
+  width: 100%;
+  height: 80vh; 
+}
+
+.detail-description {
+  margin-top: 20px;
+  margin-bottom: 0px;
+}
+
+.detail-description, .detail-text, .detail-title {
+  margin-left: 20px;
+}
+
+.detail-body {
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: column !important;
+}
+
+.detail-text {
+  padding-bottom: 50px;
+}
+
+.account {
+  margin: 10px 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.account-img {
+  border-radius: 100%;
+  width: 80px;
+  height: 80px;
+}
+
+.account-user {
+  margin-left: 10px;
+}
+
+.profile-container {
+  height: 100vh;
+  width: 100%;
+}
+
 @media(max-width: 800px) {
   .detail-card-container {
-    margin: 100px 100px;
+    margin: 100px 20px;
+  }
+
+  .tutorial-card-container {
+    padding-bottom: 50px;
   }
 }
